# Inputs

./: .gitignore  .gitmodules  ADCManager.cpp  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  IOHandler.cpp  IOSetup.cpp  QueueTest.cpp  Readme.md  SamplerV2  SamplerV2.cbp  bittests  cmake_install.cmake  iohandler  iosetup
cmake/: FindPoco.cmake
configs/: io.json  pins.json
libs/BBBio_lib/: BBBiolib.c
libs/IOManager/: Button.cpp  Button.h  IOManager.cpp  IOManager.h  InputDevice.cpp  InputDevice.h  RotaryEncoder.cpp  RotaryEncoder.h
libs/Util/: JsonHelper.cpp  JsonHelper.h
overlay/: SAMPLER-ADC.dts  SAMPLER-GPIO-00A0.dtbo  SAMPLER-GPIO.dts  build  build.sh
overlay/tools/BBIOConfig/OSX/bbioconfig.app/Contents/MacOS/: bbioconfig
overlay/tools/BBIOConfig/OSX/bbioconfig.app/Contents/Resources/: bbioconfig.icns
pru/: pru0adc.c  pru1adc.c
src/: ADCManager.cpp  IOHandler.cpp  IOSetup.cpp  QueueTest.cpp
vagrant/: Vagrantfile  playbook.yml
